fixes small bug with self report reducer,builds readable table on daily review, table does not scroll on mobile.

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -104,10 +104,10 @@ html {
 .menuButton{
   background-color: azure;
 }
-.bestTable {
-  transform: rotate(90deg);
-}
 
-.sure {
-  transform: rotate(270deg);
+.prettyTable {
+
+  position: relative;
+  overflow-y: scroll !important;
+  height: 400px;
 }
